2009-02-20  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (update_custom_shortcut): don't
	forget to save the shortcut command, too (bug #572501)

==================== 2.25.90 ====================

2009-01-28  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c (setup_dialog): Make Enter
	work as expected in the custom key shortcut edit dialogue

2009-01-28  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c (append_keys_to_tree),
	(edit_custom_shortcut), (update_custom_shortcut): Only print
	warnings for non-custom keybindings, Set the GConf key for
	the description when editing existing custom key shortcuts,
	Avoid warnings when the description for a custom key shortcut
	is empty

2009-01-28  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c (append_keys_to_tree):
	Print a warning when a key doesn't have a schema, so no
	description, makes debugging things like:
	https://bugzilla.redhat.com/show_bug.cgi?id=482813
	easier

2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (add_custom_shortcut): fix argument
	type warnings by casting to appropriate type

==================== 2.25.3 ====================
==================== 2.25.2 ====================

2008-11-11  Matthias Clasen  <mclasen@redhat.com>

	* gnome-keybinding-properties.c: Respect the
	/desktop/gnome/keybindings/allowed_keys key.

==================== 2.25.1 ====================

Sun Oct 26 18:06:45 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-keybinding-properties.c (cb_dialog_response): Make it
	compile again.

2008-10-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 114796 – binding to arbitrary shell commands

	* gnome-keybinding-properties.c:
	* gnome-keybinding-properties.glade: Add UI for adding and
	removing named custom shortcuts.

==================== 2.24.0.1 ====================

2008-08-23  Jens Granseuer  <jensgr@gmx.net>

	* eggcellrendererkeys.c: